# pydocstyle-gitlab-code-quality

./: LICENSE.md  README.md  ci_requirements.txt  pyproject.toml
.github/actions/: install_dependencies.yml
.github/actions/install_dependencies/: action.yml
.github/workflows/: quality.yml  release.yml
pydocstyle_gitlab_code_quality/: __init__.py  main.py
pydocstyle_gitlab_code_quality/src/: cq_types.py  hash.py
pydocstyle_gitlab_code_quality/src/config/: cli_parser.py  config.py
pydocstyle_gitlab_code_quality/src/utils/: encoder.py  logger.py
