[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydocstyle-gitlab-code-quality"
version = "0.0.1"
authors = [
  { name = "Aleksander Kluczka", email = "alagaesia.vrael@gmail.com" },
]
description = "Simple script to generate gitlab code quality report from output of pydocstyle."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/vis4rd/pydocstyle-gitlab-code-quality"
"Bug Tracker" = "https://github.com/vis4rd/pydocstyle-gitlab-code-quality/issues"

[project.entry-points."pydocstyle_gitlab_code_quality"]
cli = "pydocstyle_gitlab_code_quality:main"
