[project]
name = "pydocstyle-gitlab-code-quality"
version = "0.1.0"
authors = [
    { name = "Aleksander Kluczka", email = "aleksander.kluczka@gmail.com" },
]
description = "Simple script to generate gitlab code quality report from output of pydocstyle."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
"Homepage" = "https://github.com/vis4rd/pydocstyle-gitlab-code-quality"
"Bug Tracker" = "https://github.com/vis4rd/pydocstyle-gitlab-code-quality/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
pydocstyle-gitlab-code-quality = "pydocstyle_gitlab_code_quality:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
skip = "__init__.py"

[tool.mypy]
ignore_missing_imports = true
show_column_numbers = true
pretty = true
disallow_untyped_defs = true

[tool.pylint]
max-line-length = 100
disable = [
    "C0103",  # not snake_case naming style
    "C0114",  # missing module docstring
    "C0115",  # missing class docstring
    "C0116",  # missing method docstring
    "R0902",  # too many instance attributes
    "R0903",  # too few public methods
    "W0102",  # dangerous default value of an argument
    "W1203"   # use lazy % formatting in logging functions
]
ignore = ["__init__.py"]
